Create document controller
